Feature : "NPC 9종 추가"

--- a/Framework/Client/Include/Client.vcxproj
+++ b/Framework/Client/Include/Client.vcxproj
@@ -284,8 +284,17 @@
     <ClInclude Include="..\Header\NearReactMushroom.h" />
     <ClInclude Include="..\Header\NearReactObj.h" />
     <ClInclude Include="..\Header\Npc.h" />
+    <ClInclude Include="..\Header\Npc_Artist.h" />
+    <ClInclude Include="..\Header\Npc_Chief.h" />
     <ClInclude Include="..\Header\Npc_Cow.h" />
+    <ClInclude Include="..\Header\Npc_Dancer.h" />
+    <ClInclude Include="..\Header\Npc_DanceTeacher.h" />
+    <ClInclude Include="..\Header\Npc_Elite.h" />
+    <ClInclude Include="..\Header\Npc_Fishing.h" />
+    <ClInclude Include="..\Header\Npc_Orangi.h" />
     <ClInclude Include="..\Header\Npc_Sheep.h" />
+    <ClInclude Include="..\Header\Npc_VillagerMonkey.h" />
+    <ClInclude Include="..\Header\Npc_Wholesaler.h" />
     <ClInclude Include="..\Header\PlantBall.h" />
     <ClInclude Include="..\Header\PlantCannon.h" />
     <ClInclude Include="..\Header\Particle_FixedLeaf.h" />
@@ -481,8 +490,17 @@
     <ClCompile Include="..\Code\NearReactMushroom.cpp" />
     <ClCompile Include="..\Code\NearReactObj.cpp" />
     <ClCompile Include="..\Code\Npc.cpp" />
+    <ClCompile Include="..\Code\Npc_Artist.cpp" />
+    <ClCompile Include="..\Code\Npc_Chief.cpp" />
     <ClCompile Include="..\Code\Npc_Cow.cpp" />
+    <ClCompile Include="..\Code\Npc_Dancer.cpp" />
+    <ClCompile Include="..\Code\Npc_DanceTeacher.cpp" />
+    <ClCompile Include="..\Code\Npc_Elite.cpp" />
+    <ClCompile Include="..\Code\Npc_Fishing.cpp" />
+    <ClCompile Include="..\Code\Npc_Orangi.cpp" />
     <ClCompile Include="..\Code\Npc_Sheep.cpp" />
+    <ClCompile Include="..\Code\Npc_VillagerMonkey.cpp" />
+    <ClCompile Include="..\Code\Npc_Wholesaler.cpp" />
     <ClCompile Include="..\Code\PlantBall.cpp" />
     <ClCompile Include="..\Code\PlantCannon.cpp" />
     <ClCompile Include="..\Code\Particle_FixedLeaf.cpp" />
