--- a/Framework/Client/Include/Client.vcxproj
+++ b/Framework/Client/Include/Client.vcxproj
@@ -224,6 +224,7 @@
     <ClInclude Include="..\Header\Effect_DieSmoke.h" />
     <ClInclude Include="..\Header\Effect_Explosion.h" />
     <ClInclude Include="..\Header\Effect_GetItem.h" />
+    <ClInclude Include="..\Header\Effect_GolemFist.h" />
     <ClInclude Include="..\Header\Effect_Leaf.h" />
     <ClInclude Include="..\Header\Effect_LightningGround.h" />
     <ClInclude Include="..\Header\Effect_Shadow.h" />
@@ -420,6 +421,7 @@
     <ClCompile Include="..\Code\Effect_DieSmoke.cpp" />
     <ClCompile Include="..\Code\Effect_Explosion.cpp" />
     <ClCompile Include="..\Code\Effect_GetItem.cpp" />
+    <ClCompile Include="..\Code\Effect_GolemFist.cpp" />
     <ClCompile Include="..\Code\Effect_Leaf.cpp" />
     <ClCompile Include="..\Code\Effect_LightningGround.cpp" />
     <ClCompile Include="..\Code\Effect_Shadow.cpp" />
