Feature : "UIMgr 진행중"

--- a/Framework/Client/Include/Client.vcxproj
+++ b/Framework/Client/Include/Client.vcxproj
@@ -381,6 +381,10 @@
     <ClInclude Include="..\Header\UI_HPBar.h" />
     <ClInclude Include="..\Header\UI_Shop.h" />
     <ClInclude Include="..\Header\UI_ShortCutKey.h" />
+    <ClInclude Include="..\Header\UI_SlotFour.h" />
+    <ClInclude Include="..\Header\UI_SlotOne.h" />
+    <ClInclude Include="..\Header\UI_SlotThree.h" />
+    <ClInclude Include="..\Header\UI_SlotTwo.h" />
     <ClInclude Include="..\Header\UI_Totem.h" />
     <ClInclude Include="..\Header\UseItem.h" />
     <ClInclude Include="Client.h" />
@@ -585,6 +589,10 @@
     <ClCompile Include="..\Code\Catapult.cpp" />
     <ClCompile Include="..\Code\UI_HPBar.cpp" />
     <ClCompile Include="..\Code\UI_Shop.cpp" />
+    <ClCompile Include="..\Code\UI_SlotFour.cpp" />
+    <ClCompile Include="..\Code\UI_SlotOne.cpp" />
+    <ClCompile Include="..\Code\UI_SlotThree.cpp" />
+    <ClCompile Include="..\Code\UI_SlotTwo.cpp" />
     <ClCompile Include="..\Code\UI_Totem.cpp" />
     <ClCompile Include="..\Code\UI_ShortCutKey.cpp" />
     <ClCompile Include="..\Code\UseItem.cpp" />
