--- a/Framework/Client/Include/Client.vcxproj.filters
+++ b/Framework/Client/Include/Client.vcxproj.filters
@@ -532,6 +532,9 @@
     <Filter Include="02. GameObject\15. NPC\01. Monkey_Forest\02. Villager\02. Fishing">
       <UniqueIdentifier>{61bb3243-d36f-4c17-85b0-90a7f87a2e73}</UniqueIdentifier>
     </Filter>
+    <Filter Include="02. GameObject\04. UI\00. PlayerInfo\01. QuickSlot\00. Slot">
+      <UniqueIdentifier>{af6c14a3-5b92-4d7b-9761-925a611b3231}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\Header\MainApp.h">
@@ -1058,6 +1061,18 @@
     <ClInclude Include="..\Header\Npc_Fishing.h">
       <Filter>02. GameObject\15. NPC\01. Monkey_Forest\02. Villager\02. Fishing</Filter>
     </ClInclude>
+    <ClInclude Include="..\Header\UI_SlotFour.h">
+      <Filter>02. GameObject\04. UI\00. PlayerInfo\01. QuickSlot\00. Slot</Filter>
+    </ClInclude>
+    <ClInclude Include="..\Header\UI_SlotOne.h">
+      <Filter>02. GameObject\04. UI\00. PlayerInfo\01. QuickSlot\00. Slot</Filter>
+    </ClInclude>
+    <ClInclude Include="..\Header\UI_SlotThree.h">
+      <Filter>02. GameObject\04. UI\00. PlayerInfo\01. QuickSlot\00. Slot</Filter>
+    </ClInclude>
+    <ClInclude Include="..\Header\UI_SlotTwo.h">
+      <Filter>02. GameObject\04. UI\00. PlayerInfo\01. QuickSlot\00. Slot</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\Code\MainApp.cpp">
@@ -1566,6 +1581,18 @@
     </ClCompile>
     <ClCompile Include="..\Code\Npc_Fishing.cpp">
       <Filter>02. GameObject\15. NPC\01. Monkey_Forest\02. Villager\02. Fishing</Filter>
+    </ClCompile>
+    <ClCompile Include="..\Code\UI_SlotFour.cpp">
+      <Filter>02. GameObject\04. UI\00. PlayerInfo\01. QuickSlot\00. Slot</Filter>
+    </ClCompile>
+    <ClCompile Include="..\Code\UI_SlotOne.cpp">
+      <Filter>02. GameObject\04. UI\00. PlayerInfo\01. QuickSlot\00. Slot</Filter>
+    </ClCompile>
+    <ClCompile Include="..\Code\UI_SlotThree.cpp">
+      <Filter>02. GameObject\04. UI\00. PlayerInfo\01. QuickSlot\00. Slot</Filter>
+    </ClCompile>
+    <ClCompile Include="..\Code\UI_SlotTwo.cpp">
+      <Filter>02. GameObject\04. UI\00. PlayerInfo\01. QuickSlot\00. Slot</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
