--- a/Framework/Client/Include/Client.vcxproj.filters
+++ b/Framework/Client/Include/Client.vcxproj.filters
@@ -535,6 +535,9 @@
     <Filter Include="02. GameObject\04. UI\00. PlayerInfo\01. QuickSlot\00. Slot">
       <UniqueIdentifier>{af6c14a3-5b92-4d7b-9761-925a611b3231}</UniqueIdentifier>
     </Filter>
+    <Filter Include="02. GameObject\04. UI\99. ETC\00. InvenTabCursor">
+      <UniqueIdentifier>{f281bf3c-517f-4efb-a81c-64d83baec659}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\Header\MainApp.h">
@@ -1071,6 +1074,12 @@
       <Filter>02. GameObject\04. UI\00. PlayerInfo\01. QuickSlot\00. Slot</Filter>
     </ClInclude>
     <ClInclude Include="..\Header\Effect_GolemFist.h" />
+    <ClInclude Include="..\Header\InventoryUI.h">
+      <Filter>02. GameObject\04. UI\99. ETC</Filter>
+    </ClInclude>
+    <ClInclude Include="..\Header\InvenTabButton.h">
+      <Filter>02. GameObject\04. UI\99. ETC</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\Code\MainApp.cpp">
@@ -1590,6 +1599,12 @@
       <Filter>02. GameObject\04. UI\00. PlayerInfo\01. QuickSlot\00. Slot</Filter>
     </ClCompile>
     <ClCompile Include="..\Code\Effect_GolemFist.cpp" />
+    <ClCompile Include="..\Code\InvenTabButton.cpp">
+      <Filter>02. GameObject\04. UI\99. ETC</Filter>
+    </ClCompile>
+    <ClCompile Include="..\Code\InventoryUI.cpp">
+      <Filter>02. GameObject\04. UI\99. ETC</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <Image Include="Client.ico">
